kubernetes/apps/apps/jellyfin/jellyfin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: jellyfin
        app: jellyfin
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000" # < ASCII code for '65541'
            - name: PUID
              value: "1000" #< ACII code for '1044'
            - name: TZ
              value: Europe/Vienna # Container must run as privileged inside of the pod, required for hardware acceleration
          image: harbor.cloud.traunseenet.com/ghcr.io/linuxserver/jellyfin:10.11.11
          imagePullPolicy: IfNotPresent
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http-tcp
              protocol: TCP
            - containerPort: 8920
              name: https-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 7359
              name: discovery-udp
              protocol: UDP
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: config
              subPath: jellyfin-config
            - mountPath: /data
              name: data
      volumes:
        - name: config
          nfs:
            server: 10.0.0.154
            path: /mnt/nvmepool/kubernetes/media/config
        - name: data
          nfs:
            server: 10.0.0.154
            path: /mnt/nvmepool/kubernetes/media/data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
