kubernetes/apps/apps/jellyfin/jellyfin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
     external-dns.alpha.kubernetes.io/hostname: "jellyfin.cloud.traunseenet.com"
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - port: 8096
      name: http-tcp
      targetPort: 8096
      protocol: TCP
    - port: 8920
      name: https-tcp
      targetPort: 8920
      protocol: TCP
