kubernetes/apps/apps/jellyfin/jellyfin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - jellyfin.cloud.traunseenet.com
        - jellyfin.proxy.traunseenet.com
      secretName: jellyfin-cert
  ingressClassName: traefik
  rules:
    - host: jellyfin.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http-tcp
    - host: jellyfin.proxy.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http-tcp
